# ecg-robustness

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  REPORT-PLAN.md  pyproject.toml  requirements.txt
data/: README.md
docs/: ECG-C-paper.md  ECG-C-proposal.md  ECG-C-report-review.md  ECG-C-report.md  pre-registration.md  ts-research-ideas.md
docs/archive/: TSC-C-proposal.md
notebooks/: 01_data.ipynb  02_corruptions.ipynb  03_leaderboard_mce.ipynb  04_fragility_significance.ipynb
src/: __init__.py  analysis.py  corruptions.py  data.py  evaluate.py  models.py  run_eval.py  stats.py
tests/: test_ecgc.py
